Uglifyjs JS source files, use with final build

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 	<script type="text/json" id="json-info"><%= JSON.stringify(info) %></script>
 	<script src="cordova.js"></script>
-	<script src="js/all.js"></script>
+	<script src="js/all.min.js"></script>
 
 </body>
 </html>
