Now using TCP sockets to communicate directly with electrum servers

--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
 				<label for="{{id}}">{{label}}</label>
 			</div>{{#if description}}
 			<div class="form-description">{{description}}</div>{{/if}}
-			<div class="form-field">
+			<div class="form-field id-{{id}}">
 				{{> formField .}}
 			</div>
 		</div>
