--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,18 @@
 		</div>
 	</script>
 
+	<script type="text/html" id="template-disclaimers">
+		<h2 class="page-title">{{i18n "disclaimers.title"}}</h2>
+		<ul>
+			<li>{{i18n "disclaimers.1"}}</li>
+			<li>{{i18n "disclaimers.2"}}</li>
+			<li>{{i18n "disclaimers.3"}}</li>
+		</ul>
+		<div class="secondary-controls">
+			<a class="secondary-control button accept"></a>
+		</div>
+	</script>
+
 	<script type="text/json" id="json-info"><%= JSON.stringify(info) %></script>
 	<script src="cordova.js"></script>
 <% if (target === 'dev') { %>
