Copy receive addr to clipboard

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,9 @@
 			<div class="address-qrcode"></div>
 			<div class="address-text"></div>
 		</div>
+		<div class="secondary-controls">
+			<a class="secondary-control button copy-to-clipboard">Copy to clipboard</a>
+		</div>
 	</script>
 
 	<script type="text/html" id="template-send">
