--- a/src/index.html
+++ b/src/index.html
@@ -102,22 +102,32 @@
 					<th class="scoreboard-1st double-spends" colspan="3">{{i18n "send.scoreboard.double-spends"}}</th>
 				</tr>
 				<tr>
-					<th class="scoreboard-2nd payments pending">{{i18n "send.scoreboard.pending"}}</th>
-					<th class="scoreboard-2nd payments invalid">{{i18n "send.scoreboard.invalid"}}</th>
-					<th class="scoreboard-2nd payments confirmed">{{i18n "send.scoreboard.confirmed"}}</th>
-					<th class="scoreboard-2nd double-spends pending">{{i18n "send.scoreboard.pending"}}</th>
-					<th class="scoreboard-2nd double-spends invalid">{{i18n "send.scoreboard.invalid"}}</th>
-					<th class="scoreboard-2nd double-spends confirmed">{{i18n "send.scoreboard.confirmed"}}</th>
+					<th class="scoreboard-2nd payments pending"></th>
+					<th class="scoreboard-2nd payments invalid"></th>
+					<th class="scoreboard-2nd payments confirmed"></th>
+					<th class="scoreboard-2nd double-spends pending"></th>
+					<th class="scoreboard-2nd double-spends invalid"></th>
+					<th class="scoreboard-2nd double-spends confirmed"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
-					<td class="scoreboard-3rd payments pending">{{payments.pending}}</td>
-					<td class="scoreboard-3rd payments invalid">{{payments.invalid}}</td>
-					<td class="scoreboard-3rd payments confirmed">{{payments.confirmed}}</td>
-					<td class="scoreboard-3rd double-spends pending">{{doubleSpends.pending}}</td>
-					<td class="scoreboard-3rd double-spends invalid">{{doubleSpends.invalid}}</td>
-					<td class="scoreboard-3rd double-spends confirmed">{{doubleSpends.confirmed}}</td>
+					<td class="scoreboard-3rd payments pending">{{payments.pending.count}}</td>
+					<td class="scoreboard-3rd payments invalid">{{payments.invalid.count}}</td>
+					<td class="scoreboard-3rd payments confirmed">{{payments.confirmed.count}}</td>
+					<td class="scoreboard-3rd double-spends pending">{{doubleSpends.pending.count}}</td>
+					<td class="scoreboard-3rd double-spends invalid">{{doubleSpends.invalid.count}}</td>
+					<td class="scoreboard-3rd double-spends confirmed">{{doubleSpends.confirmed.count}}</td>
+				</tr>
+				<tr>
+					<td class="scoreboard-4th payments confirmed" colspan="3">
+						<span class="sum">{{payments.confirmed.sum}}</span>
+						<span class="symbol">{{symbol}}</span>
+					</td>
+					<td class="scoreboard-4th double-spends confirmed" colspan="3">
+						<span class="sum">{{doubleSpends.confirmed.sum}}</span>
+						<span class="symbol">{{symbol}}</span>
+					</td>
 				</tr>
 			</tbody>
 		</table>
