Refresh balance / utxo button

--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,7 @@
 		<div class="balance">
 			<div class="balance-value"></div>
 			<div class="balance-symbol"></div>
+			<a class="button balance-refresh"></a>
 		</div>
 		<div class="form">
 			<form>
