Refresh button in tx history

--- a/src/index.html
+++ b/src/index.html
@@ -151,6 +151,7 @@
 		<td><a href="{{url}}">{{txidShort}}</a></td>
 		<td>{{type}}</td>
 		<td>{{status}}</td>
+		<td><a class="button refresh"></a></td>
 	</script>
 
 	<script type="text/html" id="template-form-field">
