--- a/src/index.html
+++ b/src/index.html
@@ -145,6 +145,9 @@
 			</thead>
 			<tbody class="history-items"></tbody>
 		</table>
+		<div class="history-empty">
+			<p>{{i18n "history.empty"}}</p>
+		</div>
 	</script>
 
 	<script type="text/html" id="template-history-item">
