Show pending balance

--- a/src/index.html
+++ b/src/index.html
@@ -77,9 +77,14 @@
 	<script type="text/html" id="template-send">
 		<div class="scoreboard"></div>
 		<div class="balance">
-			<div class="balance-value"></div>
-			<div class="balance-symbol"></div>
-			<a class="button balance-refresh"></a>
+			<div class="balance-total">
+				<div class="balance-value"></div>
+				<div class="balance-symbol"></div>
+				<a class="button balance-refresh"></a>
+			</div>
+			<div class="balance-pending">
+				<span class="balance-value"></span>
+			</div>
 		</div>
 		<div class="form">
 			<form>
