Auto-broadcast visual timer, reset

--- a/src/index.html
+++ b/src/index.html
@@ -97,8 +97,8 @@
 		</div>
 		<div class="secondary-controls">
 			<a class="secondary-control button payment disabled"></a>
-			<a class="secondary-control button double-spend disabled"></a>
-			<a class="secondary-control button reset disabled">{{i18n "send.reset"}}</a>
+			<a class="secondary-control button double-spend disabled"><b class="auto-double-spend-timer"></b></a>
+			<a class="secondary-control button reset disabled"></a>
 		</div>
 	</script>
 
