--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 		<a class="header-button send" href="#send"></a>
 		<a class="header-button history" href="#history"></a>
 		<a class="header-button configure" href="#configure"></a>
+		<a class="header-button debug" href="#debug"></a>
 	</div>
 	<div id="view">
 		<div id="view-content"></div>
@@ -70,7 +71,7 @@
 			<div class="address-text"></div>
 		</div>
 		<div class="secondary-controls">
-			<a class="secondary-control button copy-to-clipboard">Copy to clipboard</a>
+			<a class="secondary-control button copy-to-clipboard">{{i18n "copy-to-clipboard"}}</a>
 		</div>
 	</script>
 
@@ -225,6 +226,22 @@
 		</ul>
 		<div class="secondary-controls">
 			<a class="secondary-control button accept"></a>
+		</div>
+	</script>
+
+	<script type="text/html" id="template-debug">
+		<h2 class="page-title">{{i18n "debug.title"}}</h2>
+		<p class="page-description">{{i18n "debug.description"}}</p>
+		<pre><b>{{i18n "debug.app"}}:</b>
+{{app}}
+<b>{{i18n "debug.repository"}}:</b>
+{{repository}}
+<b>{{i18n "debug.version"}}:</b>
+{{version}}
+<b>{{i18n "debug.commit"}}:</b>
+{{commit}}</pre>
+		<div class="secondary-controls">
+			<a class="secondary-control button copy-to-clipboard">{{i18n "copy-to-clipboard"}}</a>
 		</div>
 	</script>
 
