Improved UI (buttons) text + clearer icons

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 			<div class="address-text"></div>
 		</div>
 		<div class="secondary-controls">
-			<a class="secondary-control button copy-to-clipboard">{{i18n "copy-to-clipboard"}}</a>
+			<a class="secondary-control button copy-to-clipboard has-text">{{i18n "copy-to-clipboard"}}</a>
 		</div>
 	</script>
 
@@ -98,9 +98,9 @@
 			</form>
 		</div>
 		<div class="secondary-controls">
-			<a class="secondary-control button payment disabled"></a>
-			<a class="secondary-control button double-spend disabled"><b class="auto-double-spend-timer"></b></a>
-			<a class="secondary-control button reset disabled"></a>
+			<a class="secondary-control button payment disabled has-text">{{i18n "send.pay"}}</a>
+			<a class="secondary-control button double-spend disabled has-text"><b class="auto-double-spend-timer"></b>{{i18n "send.return"}}</a>
+			<a class="secondary-control button reset disabled has-text">{{i18n "send.reset"}}</a>
 		</div>
 	</script>
 
@@ -242,7 +242,7 @@
 <b>{{i18n "debug.commit"}}:</b>
 {{commit}}</pre>
 		<div class="secondary-controls">
-			<a class="secondary-control button copy-to-clipboard">{{i18n "copy-to-clipboard"}}</a>
+			<a class="secondary-control button copy-to-clipboard has-text">{{i18n "copy-to-clipboard"}}</a>
 		</div>
 	</script>
 
@@ -253,8 +253,8 @@
 			<div class="wif-text"></div>
 		</div>
 		<div class="secondary-controls">
-			<a class="secondary-control button copy-to-clipboard">{{i18n "copy-to-clipboard"}}</a>
-			<a class="secondary-control button finished">{{i18n "close"}}</a>
+			<a class="secondary-control button copy-to-clipboard has-text">{{i18n "copy"}}</a>
+			<a class="secondary-control button close has-text">{{i18n "close"}}</a>
 		</div>
 	</script>
 
