--- a/src/index.html
+++ b/src/index.html
@@ -221,12 +221,13 @@
 	<script type="text/html" id="template-disclaimers">
 		<h2 class="page-title">{{i18n "disclaimers.title"}}</h2>
 		<ul>
-			<li>{{i18n "disclaimers.1"}}</li>
-			<li>{{i18n "disclaimers.2"}}</li>
-			<li>{{i18n "disclaimers.3"}}</li>
+			<li>{{i18n "disclaimers.testing-and-educational-purposes"}}</li>
+			<li>{{i18n "disclaimers.explicit-consent"}}</li>
+			<li>{{i18n "disclaimers.double-spend-not-guaranteed"}}</li>
+			<li>{{i18n "disclaimers.private-key-backup"}}</li>
 		</ul>
 		<div class="secondary-controls">
-			<a class="secondary-control button accept"></a>
+			<a class="secondary-control button accept has-text">{{i18n "ok"}}</a>
 		</div>
 	</script>
 
