Added timer to disclaimer OK button

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
 		</div>
 		<div class="secondary-controls">
 			<a class="secondary-control button payment disabled has-text">{{i18n "send.pay"}}</a>
-			<a class="secondary-control button double-spend disabled has-text"><b class="auto-double-spend-timer"></b>{{i18n "send.return"}}</a>
+			<a class="secondary-control button double-spend disabled has-text"><b class="timer"></b>{{i18n "send.return"}}</a>
 			<a class="secondary-control button reset disabled has-text">{{i18n "send.reset"}}</a>
 		</div>
 	</script>
@@ -227,7 +227,7 @@
 			<li>{{i18n "disclaimers.private-key-backup"}}</li>
 		</ul>
 		<div class="secondary-controls">
-			<a class="secondary-control button accept has-text">{{i18n "ok"}}</a>
+			<a class="secondary-control button accept disabled has-text"><b class="timer"></b>{{i18n "ok"}}</a>
 		</div>
 	</script>
 
