--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
 
 	<script type="text/html" id="template-configure">
 		<h2 class="page-title">{{i18n "configure.title"}}</h2>
+		<p class="page-description network-deprecated-notice">{{i18n "configure.network-deprecated"}}</p>
+		<p class="page-description network-deprecated-notice-export-wif">{{i18n "configure.network-deprecated.export-wif"}}</p>
 		<div class="form">
 			<form>
 		{{#each inputs}}
@@ -148,8 +150,9 @@
 			<thead>
 				<tr>
 					<th>txid</th>
-					<th>type</th>
-					<th>status</th>
+					<th>{{i18n "history.list-header.type"}}</th>
+					<th>{{i18n "history.list-header.status"}}</th>
+					<th colspan="3"></th>
 				</tr>
 			</thead>
 			<tbody class="history-items"></tbody>
@@ -162,7 +165,9 @@
 	<script type="text/html" id="template-history-item">
 		<td><a href="{{url}}">{{txidShort}}</a></td>
 		<td>{{type}}</td>
-		<td>{{status}}</td>
+		<td><span class="tx-status {{status}}"></span></td>
+		<td><a class="button broadcast"></a></td>
+		<td><a class="button copy-to-clipboard"></a></td>
 		<td><a class="button refresh"></a></td>
 	</script>
 
@@ -214,6 +219,9 @@
 			<div class="form-field id-{{id}} has-{{actions.length}}-actions">
 				{{> formField .}}
 			</div>
+			{{#if notes}}
+			<div class="form-notes">{{{ notes }}}</div>
+			{{/if}}
 		</div>
 	{{/if}}
 	</script>
