Added new config to choose transaction broadcast services

--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
 	<script type="text/html" id="template-form-field">
 		{{#switch type}}
 			{{#case "select" break=true}}
-			<select class="form-input" id="{{id}}" name="{{name}}">
+			<select class="form-input" id="{{id}}" name="{{name}}"{{#if readonly}} readonly{{/if}}{{#if disabled}} disabled{{/if}}{{#if multiple}} multiple{{/if}}>
 				{{#each options}}
 				<option{{#if selected}} selected{{/if}}{{#if disabled}} disabled{{/if}}{{#if key}} value="{{key}}"{{/if}}>{{label}}</option>
 				{{/each}}
