Re-fetch transactions for address occasionally

--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
 		<td>{{type}}</td>
 		<td><span class="tx-status {{status}}"></span></td>
 		<td><a class="button broadcast"></a></td>
-		<td><a class="button copy-to-clipboard"></a></td>
+		<td>{{#if rawTx}}<a class="button copy-to-clipboard"></a>{{/if}}</td>
 		<td><a class="button refresh"></a></td>
 	</script>
 
