Styling, instructional text, calculate fee if missing
Use cache: false option for jQuery ajax requests

--- a/src/index.html
+++ b/src/index.html
@@ -241,7 +241,7 @@
 
 	<script type="text/html" id="template-debug">
 		<h2 class="page-title">{{i18n "debug.title"}}</h2>
-		<p class="page-description">{{i18n "debug.description"}}</p>
+		<p class="page-description">{{{description}}}</p>
 		<pre><b>{{i18n "debug.app"}}:</b>
 {{app}}
 <b>{{i18n "debug.repository"}}:</b>
