--- a/src/index.html
+++ b/src/index.html
@@ -160,6 +160,9 @@
 		<div class="history-empty">
 			<p>{{i18n "history.empty"}}</p>
 		</div>
+		<div class="secondary-controls">
+			<a class="secondary-control button zero reset-statistics disabled has-text">{{i18n "history.reset-statistics"}}</a>
+		</div>
 	</script>
 
 	<script type="text/html" id="template-history-item">
